# Projekt_Komunikator_Slack_IO2

./: .gitignore  README.md  compose.db.yml  compose.dev.yml  compose.prod.yml  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: app-docs.yml  app-tests.yml  openapi-generator.yml  shared-generating.yml
app/: .dockerignore  Dockerfile  Dockerfile-dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/schemas/models/: confirmWorkspacePaymentRequest.ts  createPaymentResponse.ts  createWorkspaceRequest.ts  errorResponse.ts  googleAuthRequest.ts  index.ts  loginRequest.ts  (+2 more)
app/src/: App.css  App.test.tsx  App.tsx  Root.tsx  env.d.ts  index.css  main.tsx
backend/: .dockerignore  Dockerfile  Dockerfile-worker  README.md  kafka_producer.py  main.py  pyproject.toml  requirements.txt  run.sh  workspace_consumer.py
backend/db/: DataBaseSetup.py  DataBaseSetupInitialize.py  DataTypes.py  README.md
backend/realtime/: __init__.py  events.py  handlers.py
backend/routes/: attachments_route.py  channel_route.py  direct_chat_route.py  google_auth_route.py  message_route.py  post_auth_route.py  reaction_route.py  user_route.py  webhook_route.py  workspace_route.py
backend/routes/auth_route/: google_auth_route.py  post_auth_route.py
db/: DataBaseSetup.py  Setup.py  main.py
docs/: index.html  nginx.conf  openapi.html
docs/openapi/: index.html  openapi.yaml
docs/tsdoc/: hierarchy.html  index.html  modules.html
shared/db/: schema.dbml
shared/generators/: orval.config.ts
shared/openapi/: openapi.yaml
(+419 files in other folders)
