[project]
name = "projekt-komunikator-slack-io2"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.4",
    "flask-socketio>=5.5.1",
    "simple-websocket>=1.1.0",
    "google-auth>=2.49.2",
    "gunicorn>=25.3.0",
    "kafka-python>=1.3.5",
    "protobuf>=7.34.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "stripe>=15.2.0",
]
